# biological-alignment-gridworlds-benchmarks

./: .gitignore  AUTHORS.txt  Makefile  README.md  launch.json.template  pyproject.toml  test file.txt
.github/workflows/: black.yaml  tests.yaml
aintelope/: __main__.py  experiments.py  gridsearch.py  gridsearch_pipeline.py  nonpipeline.py  pipeline.py  plot_memory_records.ipynb
aintelope/agents/: __init__.py  a2c_agent.py  abstract_agent.py  ddpg_agent.py  dqn_agent.py  example_agent.py  instinct_agent.py  memory.py  ppo_agent.py  q_agent.py  sac_agent.py  sb3_instincts.py  shard_agent.py  simple_agents.py  td3_agent.py
aintelope/analytics/: boxplot.py  gridsearch_analytics.py  plot_results.ipynb  plotting.py  recording.py
aintelope/config/: __init__.py  config_eval_score.yaml  config_experiment.yaml  config_experiment_exampleagent.yaml  config_experiment_instinct.yaml  config_experiment_mixed.yaml  config_experiment_random.yaml  config_experiment_reward.yaml  config_experiment_score.yaml  config_experiment_score_a2c.yaml  config_experiment_score_a2c_cnn2.yaml  config_experiment_score_a2c_cnn3.yaml  config_experiment_score_a2c_mlp.yaml  config_experiment_score_ddpg.yaml  config_experiment_score_dqn.yaml  config_experiment_score_dqn_cnn2.yaml  config_experiment_score_dqn_cnn3.yaml  config_experiment_score_dqn_mlp.yaml  config_experiment_score_ppo.yaml  config_experiment_score_ppo_cnn2.yaml  config_experiment_score_ppo_cnn2_weightsharing.yaml  config_experiment_score_ppo_cnn3.yaml  config_experiment_score_ppo_cnn3_weightsharing.yaml  config_experiment_score_ppo_mlp.yaml  config_experiment_score_ppo_mlp_weightsharing.yaml  config_experiment_score_ppo_weightsharing.yaml  config_experiment_score_sac.yaml  config_experiment_score_td3.yaml  config_gridsearch_mixed.yaml  config_gridsearch_random.yaml  config_gridsearch_reward.yaml  config_gridsearch_score.yaml  (+12 more)
requirements/: aintelope.txt  aintelope_dev.txt  api.txt
site/: pelicanconf.py  tasks.py
tests/: __init__.py  __main__.py  test_config.py
(+41 files in other folders)
