[project]
name = "aintelope"
version = "0.1.0"
description = "Simulate agents with reinforcement learning over selected cue-response patterns"
readme = "README.md"
authors = [
  {name = "Hauke Rehfeld", email = "git@haukerehfeld.de"},
  {name = "Gunnar Zarncke", email = "gunnar@zarncke.de"},
  {name = "Andre Kochanke", email = "a.kochanke@posteo.net"}]
requires-python = ">=3.10.3"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aintelope"]

[tool.black]
line-length = 79

[tool.flake8]
max-line-length = 80

[tool.isort]
line_length = 80

[tool.mypy]
ignore_missing_imports = true
