[project]
name = "aintelope"
version = "0.9.0"
description = "Simulate agents with reinforcement learning over selected cue-response patterns"
readme = "README.md"
authors = [
  {name = "Roland Pihlakas", email = "roland@simplify.ee"},  
  {name = "Orpheus Lummis", email = "o@orpheuslummis.info"},
  {name = "Nathan Helm-Burger", email = "nathan.helm.burger@gmail.com"},
  {name = "Joel Pyykkö", email = "sassort@gmail.com"},  
  {name = "Hauke Rehfeld", email = "git@haukerehfeld.de"},
  {name = "Gunnar Zarncke", email = "gunnar@zarncke.de"},
  {name = "Andre Kochanke", email = "a.kochanke@posteo.net"}]
requires-python = ">=3.10.3"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aintelope", "tests"]

[tool.black]
line-length = 88
force-exclude = '''
/(
ai_safety_gridworlds
| gymnasium
| outputs
| pettingzoo
| pycolab
| stable_baselines3
| supersuit
| \.vshistory
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = "E121,E123,E126,E226,E24,E704,W503,W504,E203,E501,F401,W291,E266,F403,F405,F841,E265,F811"
exclude = "ai_safety_gridworlds"

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
ignore_missing_imports = true
